[gd_scene load_steps=50 format=2]

[ext_resource path="res://sounds/win.wav" type="AudioStream" id=1]
[ext_resource path="res://fonts/Lato-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://buttons/menu-button.tscn" type="PackedScene" id=3]
[ext_resource path="res://icons/arrow-left.png" type="Texture" id=4]
[ext_resource path="res://effects/Fade.tscn" type="PackedScene" id=5]
[ext_resource path="res://sounds/space_theme2.wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/Map1.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/BallPhysics.gd" type="Script" id=8]
[ext_resource path="res://scripts/SpacebarMeter.gd" type="Script" id=9]
[ext_resource path="res://sounds/fall.ogg" type="AudioStream" id=10]
[ext_resource path="res://scenes/Flag.tscn" type="PackedScene" id=11]
[ext_resource path="res://materials/Water.tres" type="Material" id=12]
[ext_resource path="res://sounds/golf_bounce.wav" type="AudioStream" id=13]
[ext_resource path="res://sounds/golf_swing.wav" type="AudioStream" id=14]
[ext_resource path="res://sounds/waves.wav" type="AudioStream" id=15]
[ext_resource path="res://sounds/blub.wav" type="AudioStream" id=16]
[ext_resource path="res://scripts/GameManager.gd" type="Script" id=17]
[ext_resource path="res://shaders/flag_3d.shader" type="Shader" id=18]
[ext_resource path="res://shaders/ball.shader" type="Shader" id=19]
[ext_resource path="res://addons/goutte.camera.trackball/trackball_camera.gd" type="Script" id=20]
[ext_resource path="res://ball_env.tres" type="Environment" id=21]

[sub_resource type="PhysicsMaterial" id=1]
friction = 10.0
rough = true
bounce = 0.5

[sub_resource type="SphereShape" id=2]

[sub_resource type="ShaderMaterial" id=3]

[sub_resource type="SphereMesh" id=4]
material = SubResource( 3 )

[sub_resource type="OpenSimplexNoise" id=5]
octaves = 2

[sub_resource type="NoiseTexture" id=6]
width = 1024
height = 1024
seamless = true
noise = SubResource( 5 )

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 19 )
shader_param/albedo = Color( 0.341176, 0.541176, 0.701961, 1 )
shader_param/emission_amount = 7.5
shader_param/ball_pos = Vector3( 0, 0, 0 )
shader_param/scale = 0.25
shader_param/diff = Vector2( 0, 0 )
shader_param/albedo_texture = SubResource( 6 )

[sub_resource type="VisualShaderNodeColorConstant" id=8]
constant = Color( 0, 0.937255, 0.933333, 0.407843 )

[sub_resource type="VisualShader" id=9]
code = "shader_type spatial;



void vertex() {
// Output:0

}

void fragment() {
// Color:3
	vec3 n_out3p0 = vec3(0.000000, 0.937255, 0.933333);
	float n_out3p1 = 0.407843;

// Output:0
	ALBEDO = n_out3p0;
	ALPHA = dot(n_out3p0, vec3(0.333333, 0.333333, 0.333333));
	EMISSION = n_out3p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( 0, 123.75 )
nodes/fragment/0/position = Vector2( 680, 140 )
nodes/fragment/3/node = SubResource( 8 )
nodes/fragment/3/position = Vector2( 440, 160 )
nodes/fragment/connections = PoolIntArray( 3, 0, 0, 0, 3, 0, 0, 5, 3, 0, 0, 1 )

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 9 )

[sub_resource type="QuadMesh" id=11]

[sub_resource type="OpenSimplexNoise" id=12]
seed = -4
octaves = 1
period = 46.1
persistence = 0.146
lacunarity = 1.77

[sub_resource type="NoiseTexture" id=13]
seamless = true
as_normalmap = true
bump_strength = 9.3
noise = SubResource( 12 )

[sub_resource type="ShaderMaterial" id=14]
shader = ExtResource( 18 )
shader_param/wave_size = 1.0
shader_param/face_distortion = 0.364
shader_param/time_scale = Vector2( 0.242, 0 )
shader_param/uv_offset_scale = Vector2( -0.172, -0.1 )
shader_param/uv_offset_texture = SubResource( 13 )

[sub_resource type="PlaneMesh" id=15]

[sub_resource type="BoxShape" id=16]
extents = Vector3( 0.622955, 0.93922, 0.548991 )

[sub_resource type="ViewportTexture" id=17]
viewport_path = NodePath("Control/Viewport")

[sub_resource type="Gradient" id=18]
colors = PoolColorArray( 0.485597, 1, 1, 1, 0.940329, 1, 0.988812, 1 )

[sub_resource type="GradientTexture" id=19]
gradient = SubResource( 18 )

[sub_resource type="DynamicFont" id=20]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=21]

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 1, 1, 1, 0.282353 )
border_width_left = 39
border_color = Color( 1, 1, 1, 0.176471 )

[sub_resource type="Gradient" id=23]
colors = PoolColorArray( 0.580392, 0.988235, 1, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=24]
gradient = SubResource( 23 )

[sub_resource type="StyleBoxTexture" id=25]
texture = SubResource( 24 )
region_rect = Rect2( 0, 0, 2048, 1 )

[sub_resource type="DynamicFont" id=26]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0, 0, 0, 0.537255 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="DynamicFont" id=28]
size = 41
font_data = ExtResource( 2 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 17 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.711903, 0.6935, -0.110683, 0.702277, -0.703006, 0.1122, 0, -0.157606, -0.987502, 0, 33.0311, 0 )
visible = false
layers = 2
light_color = Color( 0.278431, 0, 0.529412, 1 )
light_energy = 0.01
light_indirect_energy = 0.3
shadow_enabled = true
shadow_bias = 0.01

[node name="GolfBall" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.7478, 9.69779, -13.9222 )
mode = 2
mass = 5.0
physics_material_override = SubResource( 1 )
script = ExtResource( 8 )

[node name="BallCamera" type="Camera" parent="GolfBall"]
transform = Transform( -0.374607, 0, 0.927184, 0, 1, 0, -0.927184, 0, -0.374607, 3.76399, 0.675298, -1.39698 )
cull_mask = 1048561
environment = ExtResource( 21 )
current = true
script = ExtResource( 20 )
stabilize_horizon = true
keyboard_enabled = true
keyboard_invert = true
keyboard_strength = 0.25
joystick_enabled = false
zoom_minimum = 2

[node name="CollisionShape" type="CollisionShape" parent="GolfBall"]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Ball-Mesh" type="MeshInstance" parent="GolfBall"]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0 )
layers = 9
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = SubResource( 7 )

[node name="OmniLight" type="OmniLight" parent="GolfBall/Ball-Mesh"]
layers = 9
light_energy = 0.6
omni_range = 1.95267

[node name="BigBallforMiniMap" type="MeshInstance" parent="GolfBall/Ball-Mesh"]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0 )
visible = false
layers = 2
material_override = SubResource( 10 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = null

[node name="OmniLight" type="OmniLight" parent="GolfBall/Ball-Mesh/BigBallforMiniMap"]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0 )
layers = 2
light_energy = 0.6
omni_range = 3.0

[node name="Throw" type="AudioStreamPlayer" parent="GolfBall"]
stream = ExtResource( 14 )
volume_db = -12.387

[node name="Bounce" type="AudioStreamPlayer" parent="GolfBall"]
stream = ExtResource( 13 )

[node name="Fly" type="AudioStreamPlayer" parent="GolfBall"]
stream = ExtResource( 10 )

[node name="Blub" type="AudioStreamPlayer" parent="GolfBall"]
stream = ExtResource( 16 )

[node name="Win" type="AudioStreamPlayer" parent="GolfBall"]
stream = ExtResource( 1 )

[node name="Map1" parent="." instance=ExtResource( 7 )]
transform = Transform( 4.6, 0, 0, 0, 4.6, 0, 0, 0, 4.6, 0, 7.49889, 0 )

[node name="GoalLight" type="SpotLight" parent="Map1"]
transform = Transform( -0.0737328, 0.20449, -0.00249378, -0.00282032, 0.00163389, 0.217367, 0.204486, 0.0737569, 0.00209878, -4.55985, 0.701907, 0.638793 )
spot_range = 9.40312
spot_angle = 34.7167

[node name="Flag3DScene" parent="Map1" instance=ExtResource( 11 )]
transform = Transform( 0.0153454, 0, -0.350907, 0, 0.351242, 0, 0.350907, 0, 0.0153454, -4.29223, -0.342701, 0.824327 )

[node name="MeshInstance2" type="MeshInstance" parent="Map1/Flag3DScene"]
transform = Transform( 3.21162, 4.47035e-08, 8.88178e-16, 0, -9.29918e-08, 0.999999, 7.45058e-08, -2.1274, -4.37113e-08, -0.254564, 1.57546, 1.17426 )
layers = 2
mesh = SubResource( 11 )
material/0 = SubResource( 14 )

[node name="Water" type="MeshInstance" parent="Map1"]
transform = Transform( 68.6573, 0, 0, 0, 8.54785, 0, 0, 0, -97.5327, -0.0902922, -1.40749, 0.069996 )
layers = 48
mesh = SubResource( 15 )
material/0 = ExtResource( 12 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Map1/Water"]
stream = ExtResource( 15 )

[node name="Area" type="Area" parent="Map1"]
transform = Transform( 0.0629192, 0, 0, 0, 0.129255, 0, 0, 0, 0.0629192, -4.35397, -0.817239, 0.651619 )

[node name="CollisionShape" type="CollisionShape" parent="Map1/Area"]
transform = Transform( 2.87468, 0, 0, 0, 2.87468, 0, 0, 0, 2.87468, -2.5463, -1.97787, 1.5074 )
shape = SubResource( 16 )

[node name="Control" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MiniMap" type="Sprite" parent="Control"]
position = Vector2( 888.78, 489.955 )
scale = Vector2( 0.156782, 0.156782 )
z_as_relative = false
texture = SubResource( 17 )

[node name="Frame" type="Sprite" parent="Control/MiniMap"]
show_behind_parent = true
position = Vector2( -0.271973, 0.849365 )
scale = Vector2( 0.542114, 1090.97 )
z_index = -1
z_as_relative = false
texture = SubResource( 19 )

[node name="Viewport" type="Viewport" parent="Control"]
size = Vector2( 1000, 1000 )

[node name="MapView" type="Camera" parent="Control/Viewport"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 75, 0 )
cull_mask = 1048571

[node name="MapLight" type="SpotLight" parent="Control/Viewport/MapView"]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, -1.62954e-08, -0.649433, -2.04081 )
layers = 6
light_color = Color( 1, 0.952941, 0.631373, 1 )
light_energy = 0.1
light_indirect_energy = 1.09
light_specular = 0.3
shadow_enabled = true
shadow_bias = 0.51
spot_range = 190.4
spot_attenuation = 0.406126
spot_angle = 149.5
spot_angle_attenuation = 0.933033

[node name="Moves" type="Label" parent="Control"]
margin_left = 831.0
margin_top = 22.0
margin_right = 978.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 20 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerSlider" type="VSlider" parent="Control"]
margin_left = 41.218
margin_top = 387.767
margin_right = 69.218
margin_bottom = 525.767
mouse_default_cursor_shape = 2
custom_icons/grabber = SubResource( 21 )
custom_styles/slider = SubResource( 22 )
custom_styles/grabber_area = SubResource( 25 )
rounded = true
scrollable = false
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerLabel" type="Label" parent="Control"]
margin_left = 14.1934
margin_top = 542.618
margin_right = 161.194
margin_bottom = 619.618
custom_fonts/font = SubResource( 26 )
text = "Power
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" parent="Control" instance=ExtResource( 3 )]
margin_left = 14.0
margin_top = 15.0
margin_right = 97.0
margin_bottom = 98.0
text = ""
icon = ExtResource( 4 )
expand_icon = true
scene = "res://scenes/menu.tscn"

[node name="Fade" parent="Control" instance=ExtResource( 5 )]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource( 6 )
volume_db = -20.0
autoplay = true

[node name="Win" type="WindowDialog" parent="Control"]
margin_left = 236.63
margin_top = 129.687
margin_right = 758.63
margin_bottom = 411.687
custom_styles/panel = SubResource( 27 )
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Moves2" type="Label" parent="Control/Win"]
margin_left = 61.0
margin_top = 107.0
margin_right = 459.0
margin_bottom = 155.0
custom_fonts/font = SubResource( 20 )
text = "Moves: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control/Win"]
margin_top = 36.0
margin_right = 520.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 28 )
text = "CONGRATULATIONS!"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New Game" parent="Control/Win" instance=ExtResource( 3 )]
margin_left = 55.366
margin_top = 170.366
margin_right = 455.366
margin_bottom = 253.366
text = "PLAY AGAIN"
scene = "res://scenes/golf.tscn"
[connection signal="body_entered" from="Map1/Area" to="GolfBall" method="_on_Area_body_entered"]
[connection signal="pressed" from="Control/Back" to="Control/Back" method="_load_scene"]
[connection signal="pressed" from="Control/Win/New Game" to="Control/Win/New Game" method="_load_scene"]
